--- a/assets/css/styleMobile.css
+++ b/assets/css/styleMobile.css
@@ -50,8 +50,9 @@
      */
 
     .logo-bistec {
-        align-items: flex-start;
         margin: 0;
+        width: 32vw;
+        margin-left: 5px;
     }
     
 
