--- a/assets/css/styleDark.css
+++ b/assets/css/styleDark.css
@@ -55,9 +55,27 @@
     .normal ion-icon {
         color: #a0c8f9;
     }
-    .normal:hover{ 
-        border-bottom: 3px solid #a0c8f9;
+    
+    .normal::after{
+        content: '';
+        bottom: 0;
+        position: absolute;
+        left: 50%;
+        width: 0%;
+        height: 2.5px;
+        background-color: #a0c8f9;
+        transition: 0.2s;
     } 
+    
+    .normal:hover::after{
+        left: 0;
+        width: 100%;
+    } 
+
+    header .normal-submenu li a {
+        color: #F3FAFA;
+        background: #222222;
+    }
 
     header .normal-submenu li a {
         color: #F3FAFA;
