--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,11 +280,36 @@ a {
     color: #fff;
     height: 30px;
     border-radius: 6px;
-    cursor: pointer;
     font-weight: 800;
+    position: relative;
+    min-width: 200px;
+    cursor: pointer;
+    transition: color 0.4s linear;
 }
+
 .bt-dialog:hover {
-	background-color: #1f1f1f;
+    color: #fff;
+    background: none;
+}
+
+.bt-dialog::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #13549E;
+    border-radius: 6px;
+    transform: scaleY(0);
+    z-index: -1;
+    transition: transform 0.8s;
+    transform-origin: 0 0;
+    transition-timing-function: cubic-bezier(0.5,1.6,0.4,0.7);
+}
+.bt-dialog:hover::before{
+    transform: scaleY(1);
+    border-radius: 6px;
 }
 .bt-dialog:active{
 	background-color: #2e2d2d;
