--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,11 @@ header {
     margin-left: 15px;
 }
 
+/* trocando imagens logo - dark mode*/
+header .logo-bistec img:nth-child(2){
+    display: none;
+}
+
 header ul {
 	display: inline-flex;
 }
@@ -75,11 +80,13 @@ header .normal-submenu li a {
     box-shadow: 0.2px 0.2px 0.2px 0.2px rgba(0, 0, 0, 0.473);
 }
 
-header .normal-submenu li a:hover {
+header .normal-submenu li a:hover,
+header .normal-submenu li a:focus-within {
     background: #0c407c;
     color: white;
     transition: 0.2s;
 }
+
 
 .normal-submenu ion-icon {
     font-size: 15px;
@@ -99,7 +106,8 @@ header ul ul {
     display: none;
 }
 
-header .normal-submenu li a:hover > ion-icon {
+header .normal-submenu li a:hover > ion-icon,
+header .normal-submenu li a:focus-within > ion-icon {
     color: #fff;
 }
 
@@ -113,10 +121,10 @@ header ul :hover > ul{
 	padding: 0;
     margin: 0;
 	background: #BB0A0A;
-	border: none;
-	outline: none;
 	border-radius: 6px;
 	overflow: hidden;
+    border: none;
+    outline: none;
 	font-family: 'Inter', sans-serif;
 	font-size: 15px;
 	font-weight: 900;
@@ -129,6 +137,10 @@ header ul :hover > ul{
 
 .button:active{
 	background: #d12b2b;
+}
+
+.button:focus-within {
+    border: 2px solid #141414;
 }
 
 .button_text,
@@ -152,8 +164,6 @@ a {
 	padding: 0;
 	color: #141414;
     height: 100%;
-	border: none;
-	outline: none;
     background: none;
     cursor: pointer;
     font-size: 16px;
@@ -164,6 +174,10 @@ a {
 
 .normal ion-icon {
     color: black;
+}
+
+:focus-within > .normal-submenu {
+    display: block;
 }
 
 .normal:hover{
@@ -259,6 +273,7 @@ a {
     left: 50%;
     transform: translate(-42%, -50%);
     color: rgb(255, 255, 255);
+    background-color: transparent;
     font-size: 4vw;
     font-weight: 300;
 }
@@ -279,6 +294,19 @@ a {
     justify-content: center;
     max-width: 90%;
 }
+
+#bistec-automacao img:nth-child(2),
+#bistec-cloud img:nth-child(2),
+#bistec-edu img:nth-child(2),
+#bistec-outsourcing img:nth-child(2),
+#bistec-msp img:nth-child(2),
+#bistec-renting img:nth-child(2),
+#bistec-gpdr img:nth-child(2),
+#bistec-soft img:nth-child(2),
+#bistec-wifi img:nth-child(2){
+    display: none;
+}
+
 .texto-produtos{
     margin-left: 2.5vw;
     font-weight: 300;
@@ -292,7 +320,7 @@ a {
     font-size: 3vw;
     font-weight: 500;
 }
-.texto-produtos h4{
+.texto-produtos h3{
     font-size: 2.53vw;
     font-weight: 400;
 }
@@ -316,17 +344,20 @@ a {
     height: 30px;
     border-radius: 6px;
     cursor: pointer;
-	border: none;
-	outline: none;
     font-weight: 800;
 }
 
 .bt-dialog:hover {
-	background: #1f1f1f;
+	background-color: #1f1f1f;
 }
 
 .bt-dialog:active{
-	background: #2e2d2d;
+	background-color: #2e2d2d;
+}
+
+.bt-dialog:focus-within {
+    background-color: #13549E;
+    transition: 1s;
 }
 
 .bt-dialog .button_text,
@@ -362,6 +393,7 @@ a {
   .modal-body {
     padding: 1.5em 1em;
     background-color: #ffffff;
+    color: black;
     border-top: 1px solid #080808;
     border-bottom: 1px solid #080808;
 }
@@ -448,7 +480,14 @@ footer ion-icon{
     padding: 0.3em;
     margin: 0.3em auto;
 }
-footer ion-icon:hover{
+
+footer .redes-sociais a:focus-within > ion-icon {
+    cursor: pointer;
+    background-color: #D0CEC6;
+    color: #262525;
+    transition: 0.7s;
+}
+footer ion-icon:hover {
     cursor: pointer;
     background-color: #D0CEC6;
     color: #262525;
@@ -466,10 +505,18 @@ footer ion-icon:hover{
     max-width: 70%;
 }
 
-.ionspecial{
+.ionspecial {
     color: #A0C8F9;
     border: #A0C8F9 solid 2px;
     border-bottom: 3px solid #A0C8F9;
+}
+
+
+footer .redes-sociais a:focus-within > .ionspecial,
+footer .redes-sociais button:focus-within > .ionspecial {
+    background-color: #A0C8F9;
+    color: #262525;
+    transition: 0.5s;
 }
 
 .ionspecial:hover {
@@ -528,4 +575,26 @@ footer .item3 p {
     border-style: solid;
     border-color: transparent;
     user-select: none;
+}
+
+/* jivo */
+
+.desktop_cc09 .title_da3a, .tablet_c420 .title_da3a {
+    color: rgba(0,0,0,.87)!important;
+    cursor: pointer;
+    background-color: transparent;
+    display: block;
+    font-size: 16px;
+    max-width: calc(100% - 38px);
+    text-decoration: none;
+}
+
+/* PROVISÓRIO*/
+footer button {
+    background: transparent;
+    border: none;
+}
+
+footer button:focus-within{
+    border: 1px solid white;
 }
