--- a/assets/css/styleContato.css
+++ b/assets/css/styleContato.css
@@ -1,6 +1,6 @@
 
 body {
-    background: #07305f;
+    background: linear-gradient(135deg, #10588c, #07305f);
    /* background: linear-gradient(135deg, #71b7ed, #9b59b6); */
 }
 
@@ -14,11 +14,11 @@ article {
     background-color:#F3FAFA;
     color: #000;
     margin: 2.5em 0;
+    border: 4px solid #A0C8F9;
 }
 
 .campos {
     padding: 1% 2%;
-    text-align: center;
 }
 
 .campos label {
@@ -64,6 +64,12 @@ input[type=submit]:focus-within {
     cursor: pointer;
     background-color: #A0C8F9;
     color: #161616;
+}
+
+@media (prefers-color-scheme: dark) {
+    body{
+        background: #1c1c1c;
+    }
 }
 
 
