--- a/assets/css/styleDark.css
+++ b/assets/css/styleDark.css
@@ -1,7 +1,7 @@
 @media (prefers-color-scheme: dark) {
 
     header {
-        border-bottom: 4.5px solid #a0c8f9;
+        border-bottom: 1px solid #FFEF8F;
     }
     
     header .logo-bistec img:nth-child(1){
@@ -13,7 +13,7 @@
     }
 
     .header-bistec {
-        background-color: #191a1b;
+        background-color: #141414;
     }
 
     .button, 
@@ -53,7 +53,7 @@
 
     .normal, 
     .normal ion-icon {
-        color: #a0c8f9;
+        color: #fff;
     }
     
     .normal::after{
@@ -95,6 +95,12 @@
         color: #fff;
     }
 
+    /*banner*/
+
+    .banner-bistec {
+        border-bottom: 3px solid #a0c8f9;
+    }
+
     /* produtos */
 
     #bistec-automacao img:nth-child(1),
@@ -121,16 +127,17 @@
         display: inherit;
     }
     article {
-        background-color: #202124;
+        background-color: #141414;
     }
     
     .bistec-produtos {
-        background-color: #202124;
+        background-color: #141414;
         color: #f3fafa;
     }
 
     .bt-dialog {
         background-color: #A0C8F9;
+        min-width: 0;
     }
 
     .texto-produtos .button_text {
@@ -163,6 +170,7 @@
         border-radius: 1em;
         background-color:#000;
         color: #F3FAFA;
+        border: 4px solid #A0C8F9;
     }
 
     input, textarea {
@@ -268,44 +276,49 @@
         color: rgb(255, 81, 81);
         opacity: 0.8;
     }
-}
 
-@media (prefers-color-scheme: dark) and (max-width: 620px) {
+    @media (max-width: 620px) {
 
-    .menu-cell {
-        display: block;
-        color: #fff;
-    }
-
-    .menu-cell li ion-icon {
-        color: #f3fafa;
-    }
+        .menu-cell {
+            display: block;
+            color: #fff;
+        }
     
-    .normal-menu {
-        text-align: center;
-        background-color: #141414;
-        color: #f3fafa;
-        border-bottom: none;
-    }
+        .menu-cell li ion-icon {
+            color: #f3fafa;
+        }
+        
+        .normal-menu {
+            text-align: center;
+            background-color: #141414;
+            color: #f3fafa;
+            border-bottom: none;
+        }
+    
+        .normal:hover{
+            border: none;
+            color: #A0C8F9;
+            transition: 0.2s;
+        } 
+    
+        .button_support,
+        .support_icon {
+            background: #0c407c;
+            color: #f3fafa;
+            border-right: none;
+        }
 
-    .normal:hover{
-        border: none;
-        color: #A0C8F9;
-        transition: 0.2s;
-    } 
-
-    .button_support,
-    .support_icon {
-        background: #0c407c;
-        color: #f3fafa;
-        border-right: none;
-    }
-
-    .button_support .button_text {
-        color: #f3fafa;
-    }
-
-    .texto-produtos .button_text {
-        color: #141414;
+        
+        .button_support:hover {
+            background: #0c407c;
+        }
+    
+        .button_support .button_text {
+            color: #f3fafa;
+        }
+    
+        .texto-produtos .button_text {
+            color: #141414;
+        }
     }
 }
