--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,11 @@
 }
 /*--- HEADER ---*/
 header {
-    background-color: #F3FAFA;
+    background: transparent;
     width: 100%;
     position: relative;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid #b3b3b3;
     top: 0;
 }
 .header-bistec {
@@ -37,6 +36,9 @@ header {
 }
 /* trocando imagens logo - dark mode*/
 header .logo-bistec img:nth-child(2){
+    display: none;
+}
+header .logo-bistec img:nth-child(3){
     display: none;
 }
 header ul {
@@ -94,7 +96,6 @@ header ul :hover > ul{
     height: 30px;
 	padding: 0;
     margin: 0;
-	background: #BB0A0A;
 	border-radius: 6px;
 	overflow: hidden;
     border: none;
@@ -128,7 +129,7 @@ a {
 	display: inline-flex;
     height: 30px;
     margin: 0 10px;
-	color: #141414;
+	color: #fff;
     cursor: pointer;
     font-size: 16px;
     font-family: 'Inter', sans-serif;
