--- a/assets/css/styleDark.css
+++ b/assets/css/styleDark.css
@@ -149,6 +149,30 @@
         transition: 0.4s;
     }
 
+    .bt-dialog::before{
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #fff;
+        border-radius: 6px;
+        transform: scaleY(0);
+        z-index: -1;
+        transition: transform 0.8s;
+        transform-origin: 0 0;
+        transition-timing-function: cubic-bezier(0.5,1.6,0.4,0.7);
+    }
+    .bt-dialog:hover::before{
+        transform: scaleY(1);
+        border-radius: 6px;
+    }
+        
+    .bt-dialog:active{
+        background-color: #fff;
+    }
+
     .bt-dialog:focus-within {
         background-color: #f3fafa;
     }
