--- a/assets/css/styleTv.css
+++ b/assets/css/styleTv.css
@@ -3,8 +3,12 @@
 
 @media (min-width: 2400px) {
 
+    .logo-bistec img{
+        width: 8vw;
+    }
+
     .bt-dialog {
-        padding: 2.5em 1em;
+        padding: 1em;
     }
     .redes-sociais {
         max-width: 70%;
@@ -13,6 +17,10 @@
     footer ion-icon {
         padding: 8px;
         font-size: 45px;
+    }
+
+    .texto-produtos {
+        font-size: 30px;
     }
 
     .contacts {
